--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,9 +5,10 @@
             "label": "C/C++: g++ 生成活动文件",
             "command": "/usr/bin/g++",
             "args": [
+                "-std=c++17",
                 "-fdiagnostics-color=always",
                 "-g",
-                "${file}",
+                "${fileDirname}/*.cpp",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
@@ -22,7 +23,7 @@
                 "isDefault": true
             },
             "detail": "调试器生成的任务。"
-        }
+        },        
     ],
     "version": "2.0.0"
 }
